--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
         <div class="">
 
 
-            <a class="navbar-brand logo-image" href="index.html"><img src="images/logo.svg" alt="home"></a>
+            <a class="logo" href="index.html"><img src="images/logo.svg" alt="home"></a>
 
 
 
@@ -296,7 +296,7 @@
 
 
     <!-- Team -->
-    <div id="team" class="cards-2 bg-gray text-center">
+    <div id="team" class="cards-2 text-center">
         <div class="container">
             <div class="row">
                 <div class="col-lg-12 my-5">
