--- a/portfolio/motion/demogorgon.html
+++ b/portfolio/motion/demogorgon.html
@@ -72,10 +72,10 @@
     <div class="container-fluid pb-5">
         <div class="row justify-content-center">
             <ul class="barra-interior">
-                <a href="/portfolio/motion/"> Anterior Proyecto </a> 
-                <H4 class="text-center ">God Of War - VFX</H4>
+                <a href="/portfolio/motion/god-of-war.html"> Anterior Proyecto </a> 
+                <H4 class="text-center ">Demogorgon - VFX</H4>
 
-                <a href="/portfolio/motion/demogorgon.html" > Siguiente Proyecto </a> 
+                <a href="/portfolio/motion/censo-nacional.html" > Siguiente Proyecto </a> 
                  
             </ul>
 
