--- a/portfolio/motion/god-of-war - copia (3).html
+++ b/portfolio/motion/god-of-war - copia (3).html
@@ -68,14 +68,13 @@
   
    
 
-
     <div class="container-fluid pb-5">
         <div class="row justify-content-center">
             <ul class="barra-interior">
-                <a href="/portfolio/motion/"> Anterior Proyecto </a> 
+                <a href=" "> Anterior Proyecto </a> 
                 <H4 class="text-center ">God Of War - VFX</H4>
 
-                <a href="/portfolio/motion/demogorgon.html" > Siguiente Proyecto </a> 
+                <a href="/portfolio/3d.html" > Siguiente Proyecto </a> 
                  
             </ul>
 
