--- a/portfolio/motion/censo-nacional.html
+++ b/portfolio/motion/censo-nacional.html
@@ -33,7 +33,7 @@
                 <ul class="barra">
                     <a href="/portfolio/3d.html" > <li>3D</li> </a> 
                     <a href="/portfolio/motion.html" class="active"> <li>MOTION</li> </a> 
-                    <a href=" "> <li>WEB</li> </a> 
+                    <a href="/portfolio/web.html"> <li>WEB</li> </a> 
                     <a href=" "> <li>DISEÑO</li> </a> 
                     <a href=" "> <li>CAMPAÑAS</li> </a> 
                     
@@ -81,14 +81,10 @@
 
             <div class="col-12">
                 <div id="image-gallery">
-                    <img src="/images/portfolio/motion/god of war.jpg" alt="" id="main-image">
+                    <iframe width="800" height="450" src="https://www.youtube.com/embed/gfPyWufB2wU" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
 
                     <div id="miniaturas">
-                        <img src="/images/about-background.jpg" class="miniatura" alt="image1">
-                        <img src="/images/about-background.jpg" class="miniatura" alt="image2">
-                        <img src="/images/about-background.jpg" class="miniatura" alt="image3">
-                        <img src="/images/about-background.jpg" class="miniatura" alt="image4">
-                        <img src="/images/about-background.jpg" class="miniatura" alt="image5">
+                 
                     </div>
                 </div>
 
