--- a/portfolio/web.html
+++ b/portfolio/web.html
@@ -24,7 +24,7 @@
         <div class="">
 
             <!-- Image Logo -->
-            <a class="navbar-brand logo-image" href="/index.html"><img src="/images/logo.svg" alt="home"></a> 
+            <a class="logo" href="/index.html"><img src="/images/logo.svg" alt="home"></a> 
 
             <!-- Text Logo - Use this if you don't have a graphic logo -->
             <!-- <a class="navbar-brand logo-text" href="index.html">Elma</a> -->
@@ -78,7 +78,7 @@
         
         <div class="trabajos">
 
-           <a href="https://mars-spacex.netlify.app" target="_blank" class="m-0 p-0">
+           <a href="web/spacex.html"  class="m-0 p-0">
                 <div class="card">
                     <div class="card-image">
                          <img src="/images/portfolio/web/spacex.jpg" />
@@ -90,7 +90,7 @@
 
                 </div>
             </a>
-           <a href="https://buendi.netlify.app" target="_blank" class="m-0 p-0">
+           <a href="web/buendi.html"  class="m-0 p-0">
                 <div class="card">
                     <div class="card-image">
                          <img src="/images/portfolio/web/buendi.JPG" />
@@ -102,7 +102,7 @@
 
                 </div>
             </a>
-           <a href="" target="_blank" class="m-0 p-0">
+           <a href=""  class="m-0 p-0">
                 <div class="card">
                     <div class="card-image">
                          <img src="/images/portfolio/web/fixsur.jpg" />
@@ -114,19 +114,19 @@
 
                 </div>
             </a>
-           <a href="https://aorus-esports.netlify.app" target="_blank" class="m-0 p-0">
+           <a href="web/vinoteca-victoria.html"  class="m-0 p-0">
                 <div class="card">
                     <div class="card-image">
-                         <img src="/images/portfolio/web/aorus.jpg" />
+                         <img src="/images/portfolio/web/vinoteca.jpg" />
                     </div>
 
                     <div class="card-title">
-                        <p>Aorus E-Sports</p>
+                        <p>Vinoteca "Victoria"</p>
                     </div>
 
                 </div>
             </a>
-           <a href="https://clon-disney-plus.firebaseapp.com"target="_blank"  class="m-0 p-0">
+           <a href="web/disney-plus.html"  class="m-0 p-0">
                 <div class="card">
                     <div class="card-image">
                          <img src="/images/portfolio/web/disney.jpg" />
