--- a/portfolio/3d.html
+++ b/portfolio/3d.html
@@ -24,7 +24,7 @@
         <div class="">
 
             <!-- Image Logo -->
-            <a class="navbar-brand logo-image" href="/index.html"><img src="/images/logo.svg" alt="home"></a> 
+            <a class="logo" href="/index.html"><img src="/images/logo.svg" alt="home"></a> 
 
             <!-- Text Logo - Use this if you don't have a graphic logo -->
             <!-- <a class="navbar-brand logo-text" href="index.html">Elma</a> -->
