--- a/portfolio/apps-juegos/lo-hice-app.html
+++ b/portfolio/apps-juegos/lo-hice-app.html
@@ -189,7 +189,7 @@
     <script src="js/swiper.min.js"></script> <!-- Swiper for image and text sliders -->
     <script src="js/purecounter.min.js"></script> <!-- Purecounter counter for statistics numbers -->
     <script src="/js/scripts.js"></script> <!-- Custom scripts -->
-    <script src="js/menu.js"></script> 
+    <script src="/js/menu.js"></script> 
     <script src="/index.js"></script> 
     <script>
         let miniaturas = document.querySelectorAll('.miniatura');
