--- a/portfolio/web.html
+++ b/portfolio/web.html
@@ -102,14 +102,14 @@
 
                 </div>
             </a>
-           <a href=""  class="m-0 p-0">
+           <a href="/portfolio/web/aorus.html"  class="m-0 p-0">
                 <div class="card">
                     <div class="card-image">
-                         <img src="/images/portfolio/web/fixsur.jpg" />
+                         <img src="/images/portfolio/app-juegos/aorus-2.jpg" />
                     </div>
 
                     <div class="card-title">
-                        <p>FixSur</p>
+                        <p>Aorus E-Sports </p>
                     </div>
 
                 </div>
