--- a/portfolio/web/disney-plus.html
+++ b/portfolio/web/disney-plus.html
@@ -74,6 +74,10 @@
     </nav>
    
 
+    <div id="fullImageView" onclick="Close()">
+        <img id="fullImage" src="" alt="" >
+       <span id="CloseButton" onclick="Close()"> X </span>             
+    </div>
     <div class="container-fluid pb-5">
         <div class="row justify-content-center">
             <ul class="barra-interior">
@@ -86,7 +90,7 @@
 
            
                 <div id="image-gallery">
-                    <img src="/images/portfolio/app-juegos/DisneyPlus (1).jpg" alt="" id="main-image">
+                    <img src="/images/portfolio/app-juegos/DisneyPlus (1).jpg" alt="" id="main-image" onclick="FullView(this.src)">
 
                     <div id="miniaturas">
                         <img src="/images/portfolio/app-juegos/DisneyPlus (1).jpg" class="miniatura" alt="image1">
@@ -189,6 +193,17 @@
     <script src="/js/menu.js"></script> <!-- Custom scripts -->
     <script src="/index.js"></script> 
     <script>
+
+        function FullView(ImgLink){
+            document.getElementById('fullImage').src = ImgLink;
+            document.getElementById('fullImageView').style.display ='flex';
+        }
+
+        
+        function Close(){
+            document.getElementById('fullImageView').style.display = 'none';
+        }
+
         let miniaturas = document.querySelectorAll('.miniatura');
         let imagenPrincipal = document.getElementById('main-image');
 
