--- a/portfolio/3d.html
+++ b/portfolio/3d.html
@@ -263,62 +263,62 @@ body{
         
         <div class="trabajos">
 
-           <a href="apps-juegos/lo-hice-app.html"  class="m-0 p-0">
+           <a href="/portfolio/3d/auto-nasa.html"  class="m-0 p-0">
                 <div class="card">
                     <div class="card-image">
-                         <img src="/images/portfolio/web/lo-hice- (2).jpg" />
+                         <img src="/images/portfolio/3d/auto-nasa-1.jpg" />
                     </div>
 
                     <div class="card-title">
-                        <p>¿Lo hice? <br> App</p>
+                        <p>Vehículo Nasa</p>
                     </div>
 
                 </div>
             </a>
-           <a href="web/buendi.html"  class="m-0 p-0">
+           <a href="/portfolio/3d/bar.html"  class="m-0 p-0">
                 <div class="card">
                     <div class="card-image">
-                         <img src="/images/portfolio/web/buendi.JPG" />
+                         <img src="/images/portfolio/3d/bar-1.jpg" />
                     </div>
 
                     <div class="card-title">
-                        <p>Buendi</p>
+                        <p>Bar Soviético</p>
                     </div>
 
                 </div>
             </a>
-           <a href=""  class="m-0 p-0">
+           <a href="/portfolio/3d/bote.html"  class="m-0 p-0">
                 <div class="card">
                     <div class="card-image">
-                         <img src="/images/portfolio/web/fixsur.jpg" />
+                         <img src="/images/portfolio/3d/bote-2.jpg" />
                     </div>
 
                     <div class="card-title">
-                        <p>FixSur</p>
+                        <p>Día tormentoso</p>
                     </div>
 
                 </div>
             </a>
-           <a href="web/vinoteca-victoria.html"  class="m-0 p-0">
+           <a href="/portfolio/3d/marte.html"  class="m-0 p-0">
                 <div class="card">
                     <div class="card-image">
-                         <img src="/images/portfolio/web/vinoteca.jpg" />
+                         <img src="/images/portfolio/3d/auto-nasa-1.jpg" />
                     </div>
 
                     <div class="card-title">
-                        <p>Vinoteca <br> "Victoria"</p>
+                        <p>Futuro ¿Hogar?</p>
                     </div>
 
                 </div>
             </a>
-           <a href="web/disney-plus.html"  class="m-0 p-0">
+           <a href="/portfolio/3d/stranger-things.html"  class="m-0 p-0">
                 <div class="card">
                     <div class="card-image">
-                         <img src="/images/portfolio/web/disney.jpg" />
+                         <img src="/images/portfolio/3d/stranger-1.jpg" />
                     </div>
 
                     <div class="card-title">
-                        <p>Disney+</p>
+                        <p>Stranger Things</p>
                     </div>
 
                 </div>
