--- a/portfolio/diseño.html
+++ b/portfolio/diseño.html
@@ -79,7 +79,7 @@
         
         <div class="trabajos">
 
-           <a href="diseño/ballon.html"  class="m-0 p-0">
+           <a href="/portfolio/diseño/ballon.html"  class="m-0 p-0">
                 <div class="card">
                     <div class="card-image">
                          <img src="/images/portfolio/diseño/ballon (2).jpg" />
@@ -103,38 +103,38 @@
 
                 </div>
             </a>
-           <a href=""  class="m-0 p-0">
+           <a href="/portfolio/diseño/montaje.html"  class="m-0 p-0">
                 <div class="card">
                     <div class="card-image">
-                         <img src="/images/portfolio/web/fixsur.jpg" />
+                         <img src="" />
                     </div>
 
                     <div class="card-title">
-                        <p>FixSur</p>
+                        <p>Montaje</p>
                     </div>
 
                 </div>
             </a>
-           <a href="web/vinoteca-victoria.html"  class="m-0 p-0">
+           <a href="/portfolio/diseño/maria-callas.html"  class="m-0 p-0">
                 <div class="card">
                     <div class="card-image">
-                         <img src="/images/portfolio/web/vinoteca.jpg" />
+                         <img src="/images/portfolio/diseño/maria-callas-1.jpg" />
                     </div>
 
                     <div class="card-title">
-                        <p>Vinoteca <br> "Victoria"</p>
+                        <p>María Callas</p>
                     </div>
 
                 </div>
             </a>
-           <a href="web/disney-plus.html"  class="m-0 p-0">
+           <a href="/portfolio/diseño/viñas-de-ira.html"  class="m-0 p-0">
                 <div class="card">
                     <div class="card-image">
-                         <img src="/images/portfolio/web/disney.jpg" />
+                         <img src="/images/portfolio/diseño/viñas-de-ira-1.jpg" />
                     </div>
 
                     <div class="card-title">
-                        <p>Disney+</p>
+                        <p>Viñas de Ira</p>
                     </div>
 
                 </div>
