--- a/portfolio/web/spacex.html
+++ b/portfolio/web/spacex.html
@@ -75,7 +75,11 @@
 
   
    
-
+    
+    <div id="fullImageView" onclick="Close()">
+        <img id="fullImage" src="" alt="" >
+        <span id="CloseButton" onclick="Close()"> X </span>             
+    </div>
     <div class="container-fluid pb-5">
         <div class="row justify-content-center">
             <ul class="barra-interior">
@@ -88,7 +92,7 @@
 
            
                 <div id="image-gallery">
-                    <img src="/images/portfolio/app-juegos/spacex (1).jpg" alt="" id="main-image">
+                    <img src="/images/portfolio/app-juegos/spacex (1).jpg" alt="" id="main-image" onclick="FullView(this.src)">
 
                     <div id="miniaturas">
                         <img src="/images/portfolio/app-juegos/spacex (1).jpg" class="miniatura" alt="image1">
@@ -168,7 +172,7 @@
 <div class="container">
 <div class="row">
     <div class="col-lg-12">
-        <p class="p-small">Copyright © <a href="index.html">Agencia Hidra 2022</a></p>
+        <p class="p-small">Copyright © <a href="index.html">Agencia Hidra 2023</a></p>
     </div>
 
 </div> <!-- enf of row -->
@@ -191,6 +195,16 @@
     <script src="/js/scripts.js"></script> <!-- Custom scripts -->
     <script src="/index.js"></script> 
     <script>
+
+        function FullView(ImgLink){
+            document.getElementById('fullImage').src = ImgLink;
+            document.getElementById('fullImageView').style.display ='flex';
+        }
+
+        function Close(){    
+            document.getElementById('fullImageView').style.display = 'none';
+        }
+
         let miniaturas = document.querySelectorAll('.miniatura');
         let imagenPrincipal = document.getElementById('main-image');
 
