--- a/portfolio/apps-juegos/corona.html
+++ b/portfolio/apps-juegos/corona.html
@@ -41,7 +41,7 @@
                 </li>
     
                 <li class="menu2__item menu2__item--show">
-                    <a href="#" class="menu2__link">Proyectos <img src="/images/arrow-right-svg.svg" class="menu2__arrow"></a>
+                    <a href="#" class="menu2__link">Portfolio <img src="/images/arrow-right-svg.svg" class="menu2__arrow"></a>
     
                     <ul class="menu2__nesting">
                         <li class="menu2__inside">
